tests/res/compile_errors/super_outside_method.say
print(super.x); // error: Cannot use 'super' outside of a class method
